--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,6 +10,9 @@ html(lang="en")
         header
             h1 It works!
         main 
+            ul
             h2 welcome to noom
-        button Call
+            form
+                input(type="text", placeholder="write a msg", required)
+                button send
         script(src="/public/js/app.js")
