--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -8,11 +8,13 @@ html(lang="en")
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
     body 
         header
-            h1 It works!
-        main 
-            ul
             h2 welcome to noom
-            form
+        main 
+            form#nick
+                input(type="text", placeholder="choose a nickname", required)
+                button save
+            ul
+            form#message
                 input(type="text", placeholder="write a msg", required)
                 button send
         script(src="/public/js/app.js")
